# cann-learning-hub

./: .gitignore  CONTRIBUTION.md  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  opencode.json
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
reference_practice/model_inference_optimization/qwen3_8b/src/: pyproject.toml  qwen3_npu_adaptation.py
reference_practice/model_inference_optimization/qwen3_8b/src/inference_scripts/: inference_qwen3_8b.py
reference_practice/model_inference_optimization/qwen3_8b/src/inference_scripts/recipe_qwen3_8b/executor/scripts/: function.sh  infer.sh
reference_practice/model_inference_optimization/qwen3_8b/src/inference_scripts/recipe_qwen3_8b/executor/utils/: forward_metadata.py
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/: QmmCustom.json  requirements.txt  run_qmm_custom_once.sh  test.sh  test_case_profiler.py  test_cases.py  test_cases_min.py
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/qmm_custom/: CMakeLists.txt  CMakePresets.json  build.sh
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/qmm_custom/op_host/: qmm_custom.cpp  qmm_custom_tiling.h
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/qmm_custom/op_kernel/: CMakeLists.standalone.txt  qmm_custom.cpp  qmm_custom_standalone.asc  qmm_custom_tiling.h  run_qmm_custom_standalone.sh
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/torch_ops_extension/: build_and_install.sh
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/torch_ops_extension/custom_ops/: __init__.py
reference_practice/model_inference_optimization/qwen3_8b/src/op_custom/torch_ops_extension/custom_ops/converter/: qmm_custom.py
reference_practice/model_inference_optimization/qwen3_8b/src/samples/: prompts.jsonl
skills/examples/as_strided/code/demo/: CMakeLists.txt  main.cpp
tutorials/MC2_fused_operator_development/02_MoE_basic_operator_tutorial/scaffold_02_10/: CMakeLists.txt
tutorials/MC2_fused_operator_development/02_MoE_basic_operator_tutorial/scaffold_02_10/cmake/: shmem.cmake
tutorials/MC2_fused_operator_development/02_MoE_basic_operator_tutorial/scaffold_02_10/include/: moe_distribute_dispatch.h  moe_distribute_dispatch_non_quant.h
tutorials/MC2_fused_operator_development/02_MoE_basic_operator_tutorial/scaffold_02_10/src/: 0_non_quant_naive.asc  utils.h
tutorials/ascendc_operator_development/02_AscendC_basic/src/02.09/kernel_pytorch_call/practice_torch_library/: CMakeLists.txt  practice_test.py  run_practice.sh
tutorials/ascendc_operator_development_V2/03_programming_model/answer/03.03.04/add/: CMakeLists.txt  add.asc  add.h
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/answer/04_05_simt_gather_operator/: CMakeLists.txt  gather_2d.asc
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_02_static_tensor_cv_fusion/: CMakeLists.txt  data_utils.h  leakyrelu_basic_api.asc  mmad_basic_api.asc  mmad_leakyrelu_basic_api.asc  run_leakyrelu.sh  run_mmad.sh  run_mmad_leakyrelu.sh
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_02_static_tensor_cv_fusion/scripts/: gen_data.py  verify_result.py
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_04_cv_fusion/: CMakeLists.txt  data_utils.h  run.sh
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_04_cv_fusion/scripts/: gen_data.py  verify_result.py
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_05_tensor_api_matmul/: CMakeLists.txt  data_utils.h  run.sh  tensor_mmad_double_buffer.asc  tensor_mmad_double_buffer_kernel.h  tensor_mmad_host.h  tensor_mmad_multi_core.asc  tensor_mmad_multi_core_kernel.h  tensor_mmad_practice.asc  tensor_mmad_single_core.asc  tensor_mmad_single_core_kernel.h  tensor_mmad_stepK_answer_kernel.h  tensor_mmad_stepK_kernel.h
tutorials/ascendc_operator_development_V2/04_simple_operator_practice/src/04_05_tensor_api_matmul/scripts/: gen_data.py  verify_result.py
tutorials/ascendc_operator_development_V2/05_framework_integration/answer/05.02_answer/: CMakeLists.txt  matmul_custom.asc  practice_test.py  run_answer.sh  torch_binding.cpp
tutorials/ascendc_operator_development_light/02_AscendC_basic/answer/02.06/: CMakeLists.txt
tutorials/ascendc_operator_development_light/02_AscendC_basic/src/02.05/: CMakeLists.txt
tutorials/ascendc_operator_development_light/02_AscendC_basic/src/02.05/scripts/: gen_data.py  verify_result.py
tutorials/ascendc_operator_development_light/02_AscendC_basic/src/02.06/kernel_pytorch_call/torch_library/: CMakeLists.txt  README.md  add_custom_test.py  torch_binding_excerpt_call.cpp
tutorials/ascendc_operator_development_light/03_simple_operator_practice/answer/03.07/: CMakeLists.txt  matmul_sinh.asc
tutorials/conv_operator_development/01_conv_basic_operator_development/src/conv3ddw_op/: CMakeLists.txt  minimal_demo.asc
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/: CMakeLists.txt  build.sh  quant_matmul_mxfp8_tutorial.asc
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/cmake/: tensor_api.cmake
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/include/block/: block_mmad.h  quant_matmul_mx_block_mmad_swat.h  quant_matmul_mx_block_scheduler_swat.h
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/include/kernel/: quant_matmul_mx_kernel_swat.h
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/include/tiling/: quant_matmul_mx_tiling_swat.h
tutorials/matmul_operator_development/01_matmul_basic_operator_development/src/01.07_blaze_based_matmul_operator_development/scripts/: gen_data.py  run.sh
(+1044 files in other folders)
