[build-system]
requires = ["setuptools>=61.0,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-8b-npu-inference"
version = "0.1.0"
description = "Qwen3-8B NPU inference and optimization utilities"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.1",
    "datasets==3.6.0",
    "modelscope>=1.20.0",
    "transformers>=4.51.0",
    "safetensors",
    "tokenizers",
]

[tool.setuptools]
py-modules = ["qwen3_npu_adaptation"]
